# opelections

./: .gitignore  Application.hs  Foundation.hs  Handlers.hs  Import.hs  LICENSE  Model.hs  README.md  Settings.hs  Utils.hs  Widgets.hs  deploy.sh  devel.hs  main.hs  opelections.cabal
Handler/: Opelections.hs
Settings/: StaticFiles.hs
config/: models  nginx.conf.in  routes  settings.yml  sqlite.yml
messages/: fr.msg
static/js/: jquery-ui-1.8.17.custom.min.js
templates/: ballotById.hamlet  ballotById.julius  ballotForm.hamlet  ballotForm.julius  ballotList.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  error.hamlet  faq.hamlet  root.hamlet  root.lucius  vote-utile.hamlet  vote-utile.lucius
