name:              opelections
version:           1.0
license:           BSD3
license-file:      LICENSE
author:            Changaco
maintainer:        Changaco
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://opelections.info/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Handler.Opelections
                     Import
                     Model
                     Settings
                     Settings.StaticFiles

    ghc-options:   -Wall -threaded -O0 -fno-warn-missing-signatures
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

executable         opelections
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

    build-depends: base >= 4 && < 5
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-default
                 , yesod-form
                 , mime-mail
                 , clientsession
                 , bytestring
                 , text
                 , persistent
                 , persistent-sqlite
                 , template-haskell
                 , hamlet
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , time
                 , network
                 , persistent-template
                 , wai
                 , http-types
                 , blaze-html
