name:              opelections
version:           2.0
license:           GPL-3
author:            Changaco
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/Changaco/opelections

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Handlers
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Utils
                     Widgets

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -fno-warn-missing-signatures
    else
        ghc-options:   -Wall -O2 -fno-warn-missing-signatures

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                RecordWildCards

    build-depends: base >= 4 && < 5
                 , blaze-html
                 , bytestring
                 , classy-prelude
                 , clientsession
                 , data-default
                 , directory
                 , fast-logger
                 , hamlet
                 , hjsmin
                 , http-conduit
                 , http-types
                 , mime-mail
                 , monad-control
                 , monad-logger
                 , network
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , process >= 1.2.0.0
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , system-filepath
                 , template-haskell
                 , text
                 , time
                 , wai
                 , wai-extra
                 , wai-logger
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static


executable         opelections
    if flag(library-only)
        Buildable: False

    ghc-options:  -Wall -threaded -O2

    main-is:          main.hs
    hs-source-dirs:   app

    build-depends: base
                 , opelections
                 , yesod
